tests/neg/i23402.check
-- [E120] Naming Error: tests/neg/i23402.scala:6:5 ---------------------------------------------------------------------
6 | def apply(p1: String)(p2: Int): A = A(p1, p2) // error
  |     ^
  |     Conflicting definitions:
  |     def apply(p1: String, p2: Int): A in object A at line 5 and
  |     def apply(p1: String)(p2: Int): A in object A at line 6
  |     have the same type (p1: String, p2: Int): A after erasure.
  |
  |     Consider adding a @targetName annotation to one of the conflicting definitions
  |     for disambiguation.
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  |
  | As part of the Scala compilation pipeline every type is reduced to its erased
  | (runtime) form. In this phase, among other transformations, generic parameters
  | disappear and separate parameter-list boundaries are flattened.
  |
  | For example, both `f[T](x: T)(y: String): Unit` and `f(x: Any, z: String): Unit`
  | erase to the same runtime signature `f(x: Object, y: String): Unit`. Note that
  | parameter names are irrelevant.
  |
  | In your code the two declarations
  |
  |   def apply(p1: String, p2: Int): A
  |   def apply(p1: String)(p2: Int): A
  |
  | erase to the identical signature
  |
  |   (p1: String, p2: Int): A
  |
  | so the compiler cannot keep both: the generated bytecode symbols would collide.
  |
  | To fix this error, you must disambiguate the two definitions by doing one of the following:
  |
  | 1. Rename one of the definitions.
  | 2. Keep the same names in source but give one definition a distinct
  |    bytecode-level name via `@targetName`; for example:
  |
  |       @targetName("apply_2")
  |       def apply(p1: String)(p2: Int): A
  |
  | Choose the `@targetName` argument carefully: it is the name that will be used
  | when calling the method externally, so it should be unique and descriptive.
   ---------------------------------------------------------------------------------------------------------------------
